fixed tooltip overlap issue

--- a/src/app/components/timeline.component/timeline.component.scss
+++ b/src/app/components/timeline.component/timeline.component.scss
@@ -40,7 +40,7 @@
   }
 
 ::ng-deep .vis-timeline {
-  overflow: none;
+  overflow: inherit;
 }
 
 ::ng-deep .vis-tooltip {
